LPS-40840 - This won't work as is, and has a few regressions (basically, whenever portlet-content doesn't exist) and isn't an issue in every theme. Instead, we should just make the header darker in the default classic color scheme when the lfr-configurator-visibility class is there to compensate for the opacity

--- a/portal-web/docroot/html/themes/classic/_diffs/css/color_schemes/common.css
+++ b/portal-web/docroot/html/themes/classic/_diffs/css/color_schemes/common.css
@@ -85,6 +85,10 @@
 			}
 		}
 
+		.lfr-configurator-visibility .portlet-topper {
+			background: transparent;
+		}
+
 		/* ---------- Portlet hover styles ---------- */
 
 		.portlet-borderless-container {
